fixed foot for lat overflow issue

--- a/issue9/src/styles.css
+++ b/issue9/src/styles.css
@@ -237,8 +237,8 @@ button {
 
 .profile-img-container {
     margin: 4em 1em 2em 1em;
-    width: 15em;
-    height: 15em;
+    width: 80vw;
+    height: 80vw;
     background-image: url("images/profile-pic.jpg");
     background-position: center;
     background-repeat: no-repeat;
@@ -387,10 +387,8 @@ button {
 /* Site Footer styles */
 
 .grid-footer {
-    width: 100%;
     height: 2em;
     margin: 1em;
-    position: absolute;
     bottom: 0;
 }
 
@@ -579,7 +577,6 @@ button {
     /* Footer styles */
 
     .grid-footer {
-        width: 100%;
         height: auto;
         grid-column: 1 / span 8;
         grid-row: 5 / span 1;
